--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@ local.properties
 */.classpath
 */.project
 
+Servers/
+MANIFEST.MF
+catalina.policy
+catalina.properties
+
 # External tool builders
 .externalToolBuilders/
 
